# sonomemo

./: .gitignore  AI_CONTEXT.md  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: docs.yml
examples/: full_config_sample.toml  theme_forest_calm.toml  theme_midnight_neon.toml  theme_ocean_blue.toml  theme_warm_sunshine.toml
logss/: 2025-12-16.md
src/: app.rs  config.rs  main.rs  models.rs  storage.rs  ui.rs
src/ui/: color_parser.rs  components.rs  mod.rs  parser.rs  popups.rs
