[package]
name = "sonomemo"
version = "0.1.0"
edition = "2025"
authors = ["sonohoshi"]
description = "A powerful terminal-based memo application for power users."
license = "MIT"
repository = "https://github.com/sonohoshi/sonomemo"
readme = "README.md"
categories = ["command-line-utilities", "text-editors"]
keywords = ["tui", "memo", "note-taking", "productivity", "pomodoro"]

[dependencies]
chrono = "0.4.42"
crossterm = "0.28.1"
directories = "6.0.0"
ratatui = "0.29.0"
reqwest = "0.12.25"
serde = "1.0.228"
serde_json = "1.0.145"
tui-textarea = "0.7.0"
textwrap = "0.16"
unicode-width = "0.1.13"

