[package]
name = "sonomemo"
version = "0.3.1"
edition = "2024"
authors = ["sonohoshi"]
description = "A context logging terminal app designed for ADHD brains."
license = "MIT"
repository = "https://github.com/sonohoshi/sonomemo"
readme = "README.md"
categories = ["command-line-utilities", "text-editors"]
keywords = ["tui", "memo", "note-taking", "productivity", "pomodoro"]

[dependencies]
chrono = "0.4.42"
crossterm = "0.28.1"
ratatui = "0.29.0"
tui-textarea = "0.7.0"
textwrap = "0.16"
unicode-width = "0.1.13"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
regex = "1.12.2"
open = "5.3.3"

